<resources>
    <string name="app_name" translatable="false">AddressBookSample</string>
    <string name="fragment_profile_name">Name:</string>
    <string name="fragment_profile_surname">Surname:</string>
    <string name="fragment_profile_phone">Phone:</string>
    <string name="fragment_profile_e_mail">E-mail:</string>
    <string name="fragment_profile_birthday">Birthday:</string>
    <string name="main_button_create">Create</string>
    <string name="main_menu_saved">Saved</string>
    <string name="main_menu_recommended">Recommended</string>
    <string name="main_menu_settings">Settings</string>
    <string name="dialog_ok">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_title">Delete contact?</string>
    <string name="dialog_delete_message">This action can\'t be undone.</string>
    <string name="dialog_delete">Delete</string>
    <string name="profile_valid_name">Please, enter valid name.</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="settings_notification_delay_summary">Notification will shown every </string>
    <string name="settings_time_utils"> min.</string>
    <string name="settings_recommended_count_summary"> users.</string>
    <string name="settings_recommended_count">Recommended count</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_show_notification">Show notifications</string>
    <string name="settings_notification_delay">Notification delay</string>
    <string name="settings_language">Language</string>
    <string name="settings_system">System</string>
    <string name="saved_no_contacts_saved_yet">No contacts saved yet</string>
</resources>
