<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/profile_special"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profile_make_call"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@null"
                android:src="@drawable/ic_call_white_24dp"
                app:layout_constraintEnd_toStartOf="@+id/profile_send_email"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profile_send_email"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@null"
                android:src="@drawable/ic_email_black_24dp"
                android:tint="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/profile_edit_mode"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/profile_make_call"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profile_edit_mode"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@null"
                android:src="@drawable/ic_save_white_24dp"
                app:layout_constraintEnd_toStartOf="@+id/profile_special"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/profile_send_email"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profile_special"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@null"
                android:src="@drawable/ic_person_add_white_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/profile_edit_mode"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/fragment_profile_name"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="@tools:sample/first_names" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_surname"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/fragment_profile_surname"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="@tools:sample/last_names" />
            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/profile_gender"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_birthday"
                app:layout_constraintEnd_toStartOf="@id/profile_birthday"
                app:layout_constraintStart_toStartOf="@+id/profile_surname"
                app:layout_constraintTop_toBottomOf="@+id/profile_surname" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_birthday"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:hint="@string/fragment_profile_birthday"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_gender"
                app:layout_constraintTop_toBottomOf="@id/profile_surname"
                app:layout_goneMarginStart="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="1992-03-15" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/profile_birthday_clicker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/profile_birthday"
                app:layout_constraintEnd_toEndOf="@id/profile_birthday"
                app:layout_constraintStart_toStartOf="@id/profile_birthday"
                app:layout_constraintTop_toTopOf="@id/profile_birthday" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/fragment_profile_phone"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_birthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    tools:text="@tools:sample/us_phones" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/fragment_profile_e_mail"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    tools:text="sample@sample.com" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@null"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/avatars" />


            <ImageButton
                android:id="@+id/profile_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/profile_camera"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_photo_camera_white_24dp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>